--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^5.1.0
   image_picker: ^1.0.1
   path_provider: ^2.0.15
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
