--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   image_picker: ^1.0.1
   path_provider: ^2.0.15
   shared_preferences: ^2.0.15
+  fluttertoast: ^8.2.2
+  http:
+
+
 
 dev_dependencies:
   flutter_test:
